5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1637_869.log
== TEST (2019-04-09 10:38:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = int(input("Valor sem desconto: "))

eq = (5/100) * preco

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco = int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = int(input("Valor sem desconto: "))

eq = (5/100) * preco

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco = int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:38:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = int(input("Valor sem desconto: "))

eq = (5/100) * preco

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- EXECUTION TIME:
0.169811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/869/main.py", line 6, in <module>
    preco = int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = int(input("Valor sem desconto: "))

eq = ((5/100) * preco) + preco

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco = int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = ((5/100) * preco) + preco

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- OUTPUT:
210.0945
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = preco - ((5/100) * preco)

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:39:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = preco - ((5/100) * preco)

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- EXECUTION TIME:
0.152264
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:39:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = preco - ((5/100) * preco)

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- EXECUTION TIME:
0.197425
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = preco - ((5/100) * preco)

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(msg)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = preco - ((5/100) * preco)

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(round(msg, 2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = preco - ((5/100) * preco)

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(round(msg, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:40:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
#Descont de 5% para 200 ou mais

preco = float(input("Valor sem desconto: "))

eq = preco - ((5/100) * preco)

if (preco >= 200.00):
	msg = eq
else:
	msg = preco
print(round(msg, 2))
-- EXECUTION TIME:
0.202668
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
